dev-ops/k8-cluster/ingress-school.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: school-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: school.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 1234
